--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
         <activity
             android:name=".ui.CadastroNovoActivity"
             android:label="@string/title_activity_cadastro_novo"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ui.EditarProdutoActivity"
+            android:label="@string/title_activity_editar_produto"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
