--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,5 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'se.emilsjolander:sprinkles:1.3.1'
     compile 'com.mapzen.android:lost:1.0.1'
+    compile project(':zXingLib');
 }
-
-
