--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     compile 'se.emilsjolander:sprinkles:1.3.1'
     compile 'com.mapzen.android:lost:1.0.1'
     compile project(':zXingLib');
+    compile 'com.baoyz.swipemenulistview:library:1.3.0'
 }
