--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,8 @@ android {
     }
 
     defaultConfig {
-        applicationId "br.com.trainning.pdv"
-        minSdkVersion 18
+        applicationId "br.com.trainning.pdv_2016"
+        minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -35,6 +35,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'se.emilsjolander:sprinkles:1.3.1'
     compile 'com.mapzen.android:lost:1.0.1'
-    compile project(':zXingLib');
+    compile project(':zXingLib')
     compile 'com.baoyz.swipemenulistview:library:1.3.0'
+
 }
