--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,9 @@ dependencies {
     compile 'com.mapzen.android:lost:1.0.1'
     compile project(':zXingLib')
     compile 'com.baoyz.swipemenulistview:library:1.3.0'
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.squareup.okhttp:okhttp:2.7.5'
+    compile 'com.github.d-max:spots-dialog:0.4@aar'
+
 
 }
