--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,8 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp:2.7.5'
     compile 'com.github.d-max:spots-dialog:0.4@aar'
     compile 'me.zhanghai.android.materialprogressbar:library:1.1.4'
-    compile('com.github.javiersantos:MaterialStyledDialogs:1.2.2@aar') {
-        transitive = true
+    compile 'com.github.javiersantos:MaterialStyledDialogs:1.3'
+    compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:4.0.0@aar'){
+        transitive=true
     }
 }
