--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -29,11 +30,20 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
+
+    androidTestCompile 'com.android.support.test:runner:0.3'
+    androidTestCompile 'com.android.support.test:rules:0.3'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2'
+    androidTestCompile 'com.android.support:support-annotations:23.2.1'
+
+
     compile project(':zXingLib')
-    compile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.0.0@aar') {
-        transitive = true
+    compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:2.3.0@aar'){
+        transitive=true
     }
+
+
+
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:design:23.2.1'
     compile 'com.jakewharton:butterknife:7.0.1'
@@ -43,7 +53,6 @@ dependencies {
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.okhttp:okhttp:2.7.5'
     compile 'com.github.d-max:spots-dialog:0.4@aar'
-    compile 'me.zhanghai.android.materialprogressbar:library:1.1.4'
     compile 'com.github.javiersantos:MaterialStyledDialogs:1.3'
     compile 'com.android.support:support-v4:23.2.1'
 }
